2002-08-27  Nicolas Burrus  <nes@lrde.epita.fr>

	* src/options.c: Include config.h.
	* src/linux/tun.c, src/openbsd/tun.c, src/freebsd/tun.c: Likewise.
	* configure.ac: Ask config.h.

2002-08-26  Nicolas Burrus  <nes@lrde.epita.fr>

	* src/linux/tun.c: Remove warning.
	* src/p30data.c: Likewise.
	* src/main.c: Add exit on config_set failure.
	* configure.ac, Makefile.am, config/Makefile.am, include/Makefile.am, 
	src/Makefile.am, src/linux/Makefile.am, src/openbsd/Makefile.am, 
	src/freebsd/Makefile.am: New files.