@@ -1,3 +1,9 @@
+2002-08-28  Laurent Carlier <lordheavy@infonie.fr>
+	*src/options.c, include/option.h : checking for general config
+	file and personnal file ( parse_config() ).
+	*src/main.c : use parse_config() instead of parse_config_file(),
+	see above.
+
 2002-08-27  Nicolas Burrus  <nes@lrde.epita.fr>
 
 	* src/options.c: Include config.h.
